# evalsy

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  pyproject.toml  renovate.json
.github/workflows/: publish.yaml  release-drafter.yaml
src/evalsy/: __init__.py
