[project]
name = "evalsy"
version = "0.0.1a0"
description = "Evals for LLMs, made easy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.7",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "pre-commit-uv>=4.1.4",
    "pytest>=8.4.1",
]
